2018-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Rewritten to use rprotobuf/ci Docker container

2018-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* docker/run/Dockerfile: Added Dockerfile for deployment

2018-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* .Rbuildignore: Ignore GTAGS, GRTAGS, GPATH from GNU global
	* .gitignore: Idem

	* docker/ci/Dockerfile: Added Dockerfile for CI use

2018-09-06  Jeffrey Shen  <jeffrey.shen@displayr.com>

	* R/rexp_obj.R: Refinement for POSIXlt treatment

2018-09-05  Jeffrey Shen  <jeffrey.shen@displayr.com>

	* R/rexp_obj.R: Unclass POSIXlt before converting them
	* inst/unitTests/runit.serialize_pb.R: Unit test

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Enfor R version 3.4 for now as the PPA we need for the
	Protocol Buffers library has r-cran-* packages built for R 3.4

2018-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Set CXX and CXXFLAGS values by calling R to reflect
	values in Makeconf used by R  [CRAN request]
	* configure: Idem

2018-07-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.11

2018-07-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper_Message.cpp (rprotobuf): Properly reference std::vector
	(as noticed by Brian Ripley with protobuf 3.6)

2018-06-25  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: update Windows build to protobuf v3.5.1 to
	support upcoming gcc-8 toolchain.

2018-05-21  Siddhartha Bagaria  <bagaria.siddhartha@gmail.com>

	* src/DescriptorPoolLookup.cpp: New reset() function
	* src/DescriptorPoolLookup.h: Idem
	* src/RSourceTree.cpp: New directory removal function
	* src/RSourceTree.h: Idem
	* src/init.c: Register new resetDescriptorPool_cpp functions
	* src/rprotobuf.cpp: callable resetDescriptorPool_cpp() function
	* man/readProtoFiles.Rd: Added documentation
	* R/internals.R: Add R-callable resetDescriptorPool()